--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -31,5 +31,5 @@ jobs:
         context: .
         push: true
         tags: |
-          ${{ secrets.DOCKER_USERNAME }}/myapp:latest
-          ${{ secrets.DOCKER_USERNAME }}/myapp:${{ github.sha }}
+          ${{ secrets.DOCKER_USERNAME }}/docker:latest
+          ${{ secrets.DOCKER_USERNAME }}/docker:${{ github.sha }}
